# social-media-app

./: README.md  frontend.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 03d697fd463a_make_keys_as_nullable_in_artifacts_.py  1013558eed03_add_keys_to_artifacts_schema.py  baf4a9bd9845_update_type_of_file_id_to_string_from_.py  dc01f2dc07bf_update_post_id_key_to_public_id_in_.py
app/: app.py  schemas.py
app/config/: database.py
app/models/: __init__.py  artifact.py  post.py
app/services/: artifact_processing.py  artifacts.py  posts.py
